Add all api into swagger and fix incorrect router issue.
