# applicationModels/todoItemRequest.go
@@ -1,0 +1,10 @@
+package applicationModels
+
+type TodoItemRequestModel struct {
+	Content string
+}
+
+type HealthyCheckResponse struct {
+	Message string
+	Version string
+}
