# requestModels/todoItemRequest.go
@@ -1,5 +1,0 @@
-package requestModels
-
-type TodoItemRequestModel struct {
-	Content string
-}
